2012-04-09  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: When adding a Matroska file that has either
	the "previous segment UID" or the "next segment UID" set then mmg
	will copy those two and the source file's segment UID into the
	corresponding controls on the "globla" tab if they haven't been
	set before. Implements ticket 733.

	* mkvmerge: new feature: The verbose identification mode for
	Matroska files will now includes the "segment UID", the "next
	segment UID" and "previous segment UID" elements.

	* mkvmerge: enhancement: In "--split parts:" mode mkvmerge will
	use the output file name as it is instead of adding a running
	number to it if all the ranges to be kept are to be written into a
	single output file. Implements ticket 743.

	* mkvextract: bug fix: mkvextract will no longer abort extracing
	h.264 tracks if it encounters a NAL smaller than its size
	field. Instead it will warn about it and drop the NAL.

2012-04-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Writing more than two parts into the same
	file with "--split parts:" resulted in the timecodes of the third
	and all following parts to be wrong. Fixes ticket 740.

	* mkvmerge: bug fix: The "--split parts:" functionality was
	not taking dropped ranges into account when calculating the
	segment duration for files that more than one range was written
	to. Fixes ticket 738.

	* mkvmerge: bug fix: The "--split parts:" functionality was
	producing a small gap between the first part's last packet's
	timecode and the second part's first packet's timecode if two
	parts are written to the same file. Fixes ticket 742.

2012-04-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The "--split parts:" functionality was
	writing a superfluous and empty first part if the first range
	starts at 00:00:00. Fixes ticket 737.

2012-04-07  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, build system: Fixed building with wxWidgets 2.9.3.
